testdata/good/01-prims.gol
fn(
 x : int,
 y : bool,
 z : str,
) { true } (
 0,
 false,
 "hello",
)
