testdata/bad/02-badcall.gol
fn(x : int) { add(x, 1) } (true)
